--- a/src/ReportService.Infrastructure/ReportService.Infrastructure.csproj
+++ b/src/ReportService.Infrastructure/ReportService.Infrastructure.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="Dapper" Version="2.1.35" />
+      <PackageReference Include="LazyCache" Version="2.4.0" />
       <PackageReference Include="Npgsql" Version="8.0.2" />
     </ItemGroup>
 
