--- a/src/ReportService.Web/appsettings.json
+++ b/src/ReportService.Web/appsettings.json
@@ -6,7 +6,8 @@
     "BaseAddress": "http://salary.local/api/"
   },
   "HrApiOptions": {
-    "BaseAddress": "http://buh.local/api/"
+    "BaseAddress": "http://buh.local/api/",
+    "CacheTimeToLiveInHours": 100
   },
   "Logging": {
     "LogLevel": {
